--- a/css/first.css
+++ b/css/first.css
@@ -1,7 +1,7 @@
 header {
   text-align: center;
   font-size: 24px;
-  color: red;
+  color: green;
   font-weight: bold;
   font-style: italic;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
