--- a/css/first.css
+++ b/css/first.css
@@ -1,4 +1,4 @@
-header {
+h1 {
   text-align: center;
   font-size: 24px;
   color: green;
@@ -6,6 +6,10 @@ header {
   font-style: italic;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   text-align: center;
+}
+
+.second {
+  color: red;
 }
 
 .first {
