--- a/css/first.css
+++ b/css/first.css
@@ -6,6 +6,10 @@ h1 {
   font-style: italic;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   text-align: center;
+  width: 900px;
+  padding: 20px;
+  border: 5px solid black;
+  margin: auto;
 }
 
 h1 .inside {
