--- a/css/first.css
+++ b/css/first.css
@@ -10,6 +10,7 @@ h1 {
   padding: 20px;
   border: 5px solid black;
   margin: 10px;
+  position: relative;
 }
 
 /* block-level i inline element */
